<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@color/white">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/dialog_title"
        android:textSize="24sp"
        android:textColor="@color/tw__composer_black"
        android:layout_marginTop="5dp"
        />

    <EditText
        android:id="@+id/et_enterpin"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginBottom="4dp"
        android:hint="@string/pin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="80dp">

        <Button
            android:id="@+id/pin_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:layout_weight="0.5"
            android:background="#ffffffff"/>

        <Button
            android:id="@+id/pin_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/colorAccent"
            android:layout_weight="0.5"
            android:background="#ffffffff"/>

    </LinearLayout>


</LinearLayout>