<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCF83">

    <ImageView
        android:id="@+id/ivHelpExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_exit" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/do_you_really_need_help_to_play_quiz_wtf"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <!--Custom Answer A Component-->
    <FrameLayout
        android:id="@+id/buAnswerDHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buAnswerCHelp">

        <Button
            android:id="@+id/buAnswerD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/join_game_background"
            android:text="Answer D"
            android:textAllCaps="true" />

        <ImageView
            android:id="@+id/filter_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:elevation="8dp"
            android:src="@mipmap/ic_diamond" />
    </FrameLayout>

    <!--Custom Answer B Component-->
    <FrameLayout
        android:id="@+id/buAnswerCHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buAnswerDHelp"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buAnswerC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/score_quiz_background"
            android:text="Answer C" />

        <ImageView
            android:id="@+id/filter_check2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:elevation="8dp"
            android:src="@mipmap/ic_triangle" />
    </FrameLayout>

    <!--Custom Answer C Component-->
    <FrameLayout
        android:id="@+id/buAnswerAHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buAnswerCHelp"
        app:layout_constraintEnd_toStartOf="@+id/buAnswerBHelp"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buAnswerA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/host_quiz_background"
            android:text="Answer A" />

        <ImageView
            android:id="@+id/filter_check3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:elevation="8dp"
            android:src="@mipmap/ic_circle" />
    </FrameLayout>

    <!--Custom Answer D Component-->
    <FrameLayout
        android:id="@+id/buAnswerBHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buAnswerDHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buAnswerAHelp">

        <Button
            android:id="@+id/buAnswerB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/create_quiz_background"
            android:text="Answer B" />

        <ImageView
            android:id="@+id/filter_check4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:elevation="8dp"
            android:src="@mipmap/ic_square" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/help_description2"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/buAnswerAHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.205" />

</android.support.constraint.ConstraintLayout>